# server/models/DTO/user-dto.js
@@ -1,0 +1,11 @@
+export function UserLoginRequestDTO(email, password){
+    this.email = email;
+    this.password = password;
+}
+
+export function UserResponseDTO(id, name, email, best_score = null){
+    this.id = id;
+    this.name = name;
+    this.email = email;
+    this.best_score = best_score;
+}
