# server/models/errors/unauthorized-error.js
@@ -1,0 +1,5 @@
+import AppError from "./app-error.js";
+
+export function UnauthorizedError(message){
+    return AppError(401, message, "UnauthorizedError")
+}
